# Computer-ink-Illustration

./: CMakeCache.txt  CMakeLists.txt  Computer-Generated Pen-and-Ink Illustration.pptx  Makefile  Project  Readme.md  cmake_install.cmake  imgui.ini
shaders/: fshader.fs  nvshader.vs  vshader.vs
src/: BSPtree.h  PlanarMap.h  Planer.cpp  bsptree.cpp  main.cpp
